--- a/index.css
+++ b/index.css
@@ -84,7 +84,7 @@ header .logo img{
 }
 
 .banner-section{
-    background-color: #ffe3c0;
+    background-color: #ffe3c0;;
     padding: 40px 20px;
     text-align: center;
 }
