--- a/index.css
+++ b/index.css
@@ -31,31 +31,55 @@ header .logo img{
 }
 
 .main-nav a{
-    color: #fff;
+    color: #333;
     text-decoration: none;
     font-weight: bold;
     font-size: 1rem;
     padding: 5px 10px;
 }
 
-.main-nav a:hover{
-    color: #fff;
+.job-drop{
+    position: relative;
 }
 
-.main-nav a:not(hover){
-    color: #333;
-}
-
-.job-select{
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: bold;
-    color: #333;
+.dropdown-toggle{
     cursor: pointer;
 }
 
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    padding: 10px 0;
+}
+
+.dropdown-menu li{
+    padding: 8px 20px;
+}
+
+.dropdown-menu li a{
+    color: #333;
+    text-decoration: none;
+    display: black;
+}
+
+.job-drop:hover .dropdown-menu{
+    display: black;
+}
+
+.dropdown-menu li:hover{
+    background-color: #f8f9fa;
+}
+
+.dropdown-menu li a:hover{
+    color: #ff7e36;
+}
 .sub-button a{
     color: #ff7e36;
     border: 1px solid #ff7e36;
