--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Arial, sans-serif;
     color:#333;
     max-width: 1920px;
     background-color: #fff;
