--- a/index.css
+++ b/index.css
@@ -9,17 +9,20 @@ body{
     color:#333;
     max-width: 1980px;
     background-color: #fff;
-    margin: 0 auto;
+    margin-top: 80px;
 }
 
 .header{
     background-color: #fff;
-    padding: 20px;
+    padding: 15px 20px; 
     border-bottom: 1px solid #ddd;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     z-index: 10;
+    display: flex;
+    justify-content: center; 
 }
 
 .header-wrap{
@@ -27,7 +30,7 @@ body{
     align-items: center;
     display: flex;
     max-width: 1980px;
-    margin: 0 auto;
+    width: 100%;
 
 }
 
@@ -48,11 +51,16 @@ body{
     color: #ff7e35;
 }
 
-.header-menu .sub-menu{
+.header-menu a:nth-child(4):hover + .sub-menu {
+    display: flex;
+}
+
+.sub-menu{
     display: flex;
     position: absolute;
     top: 100%;
     left: 0;
+    flex-direction: column;
     background-color: white;
     border: 1px solid #e0e0e0;
     border-radius: 5px;
@@ -60,6 +68,14 @@ body{
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     width: 150px;
+}
+
+.sub-menu a {
+    display: block;
+    padding: 8px;
+    color: #333;
+    font-weight: normal;
+    text-decoration: none;
 }
 
 .header-menu .sub-menu a{
@@ -79,11 +95,14 @@ body{
     display: block;
 }
 
+.search-bar{
+    margin-left: auto;
+}
+
 .search-bar input[type="text"]{
     padding: 8px 12px;
     border: 1px solid #e0e0e0;
     border-radius: 20px;
-    margin: 20px;
 }
 
 .popular-searches{
@@ -91,7 +110,6 @@ body{
     background-color: #fffbe6;
     display: flex;
     align-items: center;
-    margin-top: 80px;
 }
 
 .search-label{
