--- a/index.css
+++ b/index.css
@@ -270,7 +270,7 @@ body{
 }
 
 .footer-bottom{
-    text-align: center;
+    text-align: left;
     font-size: 0.8rem;
     color: #999;
     margin-top: 20px;
