--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 body{
@@ -10,6 +10,8 @@ body{
     max-width: 1980px;
     background-color: #fff;
     margin-top: 80px;
+    margin: 0 auto;
+    padding-top: 80px;
 }
 
 .header{
