--- a/index.css
+++ b/index.css
@@ -115,8 +115,7 @@ body{
     display: flex;
     align-items: center;
     max-width: 1200px;
-    margin-top: 10px;
-    margin: 0 auto;
+    margin-top: 10px;s
 }
 
 .search-label{
@@ -127,7 +126,6 @@ body{
 .serach-item{
     margin-right: 10px;
     padding: 5px 10px;
-    background-color: #ff7e35;
     color: #fff;
     border: 1px solid #ddd;
     border-radius: 15px;
