--- a/index.css
+++ b/index.css
@@ -16,10 +16,11 @@ header{
     position: fixed;
     border-bottom: 1px solid #ddd;
     padding: 15px 30px;
+    max-width: 1980px;
 }
 
 .header-container{
-    max-width: 1200px;
+    max-width: 1980px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -88,7 +89,6 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .location{
-    text-align: center;
     padding: 10px 0;
     background-color: #f9f9f9;
 }
@@ -152,7 +152,7 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 .banner{
     display: flex;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1980px;
     justify-content: space-between;
     padding: 50px;
     background-color: #ffeab5;
@@ -161,25 +161,24 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 
 .banner-text h1 {
     font-size: 36px;
-    color: #333;
+    color: #111;
     line-height: 1.4;
 }
 
 .banner-text p {
-    font-size: 18px;
-    color: #666;
+    font-size: 14px;
+    color: #333;
     margin-top: 10px;
 }
 
 .banner-content img {
-    max-width: 400px;
+    max-width: 800px;
     height: auto;
 }
 
-/* Categories */
 .categories {
     padding: 30px;
-    text-align: center;
+    text-align: left;
     background-color: #fff;
 }
 
@@ -241,8 +240,8 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .app-button img {
-    height: 40px;
-    width: auto;
+    height: 50px;
+    width: 180px;
 }
 
 .app-content-1 img {
@@ -268,7 +267,6 @@ footer{
 
 .footer-container{
     max-width: 1200px;
-    margin: auto;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
