--- a/index.css
+++ b/index.css
@@ -11,20 +11,18 @@ body{
     background-color: #f9f9f9;
 }
 
+.container{
+    width: 1148px;
+    margin: 0 auto;
+}
+
 header{
     background-color: #fff;
     position: fixed;
-    border-bottom: 1px solid #ddd;
-    padding: 15px 50px;
-    width: 100%;
-}
-
-.header-container{
-    max-width: 1980px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: auto;
+    padding: 20px 0;
+    width: 100%;
 }
 
 .logo img{
@@ -151,12 +149,17 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .banner{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: space-between;
-    padding: 60px 50px;
+    gap: 20px;
     background-color: #ffeab5;
     width: 100%;
+}
+
+.banner-text{
+    text-align: start;
 }
 
 .banner-text h1 {
@@ -172,15 +175,14 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .banner-content img {
-    max-width: 500px;
+    max-width: 100%;
     height: auto;
-    margin-left: 20px;
+    justify-self: end;
 }
 
 .categories {
-    padding: 30px;
+    padding: 30px 0;
     text-align: center;
-    background-color: #fff;
 }
 
 .categories h2 {
@@ -192,9 +194,7 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 .category-list {
     display: flex;
     justify-content: space-around;
-    gap: 30px;
-    max-width: 1200px;
-    margin: auto;
+    gap: 20px;
 }
 
 .category-item {
@@ -207,9 +207,6 @@ nav a:hover + .sub-menu, .sub-menu:hover{
     height: 80px;
     border-radius: 50%;
     border: 1px solid #ddd;
-    background-color: #f9f9f9;
-    object-fit: cover;
-    margin-bottom: 10px;
 }
 
 .category-item p {
@@ -218,12 +215,17 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .app-adver {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 40px 20px;
     gap: 20px;
     background-color: #ffefe0;
+}
+
+.app-text{
+    text-align: start;
 }
 
 .app-text h2 {
@@ -233,7 +235,7 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 }
 
 .app-text h1 {
-    font-size: 20px;
+    font-size: 30px;
     color: #333;
     margin-bottom: 20px;
 }
@@ -247,34 +249,17 @@ nav a:hover + .sub-menu, .sub-menu:hover{
     width: auto;
 }
 
-.app-content-1 img {
-    max-width: 150px;
-    margin: 10px;
-}
-
-.app-content-2 img {
-    max-width: 150px;
-    margin: 10px;
-}
-
-.app-content-3 img {
-    max-width: 300px;
-    margin: 10px;
+.app-content img {
+    max-width: 100px;
+    height: auto;
 }
 
 footer{
     background-color: #fff;
     padding: 40px 0;
+    gap: 10px;
     border-top: 1px solid #ddd;
-    text-align: center;
-}
-
-.footer-container{
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    text-align: left;
 }
 
 .footer-link{
@@ -311,10 +296,9 @@ footer{
 }
 
 .footer-bottom {
-    text-align: center;
+    text-align: start;
     font-size: 12px;
     color: #888;
-    line-height: 1.5;
     margin-top: 20px;
 }
 
