--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ header{
 }
 
 nav{
-    display: flex;
+    display: inline-block;
     align-items: center;
     position: relative;
 }
@@ -44,7 +44,7 @@ nav a{
 }
 
 .sub-menu{
-    display: none;
+    display: grid;
     position: absolute;
     top: 100%;
     left: 0;
@@ -159,6 +159,7 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 
 .banner-text{
     text-align: start;
+    padding: 0 40px;
 }
 
 .banner-text h1 {
