--- a/index.css
+++ b/index.css
@@ -189,7 +189,9 @@ nav a:hover + .sub-menu, .sub-menu:hover{
 .categories h2 {
     font-size: 24px;
     color: #333;
+    text-align: start;
     margin-bottom: 20px;
+    padding: 0 40px;
 }
 
 .category-list {
