--- a/index.css
+++ b/index.css
@@ -214,7 +214,6 @@ nav a:hover + .sub-menu, .sub-menu:hover{
     height: 120px;
     border-radius: 50%;
     padding: 10px;
-    object-fit: cover;
     border: 1px solid #ddd;
     background-color: #fff;
 }
@@ -223,6 +222,7 @@ nav a:hover + .sub-menu, .sub-menu:hover{
     font-size: 14px;
     color: #333;
     margin-top: 10px;
+    font-weight: bold;
 }
 
 .app-adver {
