--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ header nav a:not(:hover){
 
 .sub-menu a{
     display: block;
-    padding: 5px 10px;
+    padding: 50px;
     color: #333;
     font-size: 12px;
     text-decoration-line: none;
@@ -85,8 +85,8 @@ header nav a:not(:hover){
 }
 
 .app-download-button{
-    background-color: #ff7e36;
-    color: #fff;
+    background-color: #daad95;
+    color: #ff7e36;
     padding: 8px 12px;
     border: none;
     border-radius: 5px;
@@ -97,6 +97,7 @@ header nav a:not(:hover){
 .app-download-button a{
     color: #fff;
     text-decoration: none;
+    text-align: end;
 }
 
 .location{
