--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body{
 }
 
 .container{
-    width: 1200px;
+    max-width: 1200px;
     padding: 0 15px;
 }
 
@@ -53,7 +53,6 @@ header nav a:hover{
     color: #111;
 }
 
-header nav a:hover ~ a,
 header nav a:not(:hover){
     color: #999;
 }
@@ -86,18 +85,19 @@ header nav a:not(:hover){
 
 .app-download-button{
     background-color: #daad95;
-    color: #ff7e36;
     padding: 8px 12px;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    right: -60px;
+    transform: translateY(-50%);
 }
 
 .app-download-button a{
-    color: #fff;
+    color: #ff7e36;
+    font-size: 16px;
     text-decoration: none;
-    text-align: end;
 }
 
 .location{
