--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body{
     line-height: 1.5;
 }
 
-.container{
+.header-container{
     max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
@@ -26,7 +26,7 @@ header{
     border-bottom: 1px solid #ddd;
     justify-content: space-between;
     padding: 20px 0;
-    width: 80%;
+    width: 100%;
 }
 
 header .logo{
@@ -36,7 +36,7 @@ header .logo{
 }
 
 header .logo svg{
-    width: 120px;
+    width: 80px;
     height: auto;
 }
 
@@ -50,7 +50,6 @@ header nav{
 header nav a{
     color: #111;
     font-size: 16px;
-    text-decoration: none;
     padding: 10px;
     position: relative;
     font-weight: bold;
@@ -61,8 +60,12 @@ header nav a:hover{
     color: #111;
 }
 
-header nav a:not(:hover){
+header nav:hover a:not(:hover){
     color: #999;
+}
+
+header nav:hover a{
+    color: #111;
 }
 
 .sub-menu{
