--- a/index.css
+++ b/index.css
@@ -9,19 +9,25 @@ body{
     color:#333;
     max-width: 1980px;
     background-color: #fff;
-    line-height: 1.5;
 }
 
 .header-container{
     max-width: 1980px;
     padding: 0 15px;
-    margin: 0 auto;
+    margin: 0 auto; 
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
 }
 
 header{
     background-color: #fff;
     position: fixed;
     display: flex;
+    max-width: 1200px;
     align-items: center;
     border-bottom: 1px solid #ddd;
     justify-content: space-between;
@@ -40,23 +46,25 @@ header .logo svg{
     height: auto;
 }
 
-header nav{
+nav{
     display: flex;
     align-items: center;
     position: relative;
+    gap: 20px;
     margin: auto;
 }
 
-header nav a{
+nav a{
     color: #111;
     font-size: 16px;
-    padding: 10px;
+    padding: 5px 10px;
+    text-decoration: none;
     position: relative;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
-header nav a:hover{
+nav a:hover{
     color: #111;
 }
 
@@ -72,42 +80,47 @@ header nav:hover a{
     display: none;
     position: absolute;
     padding: 10px;
+    left: 0;
+    top: 100%;
     background-color: #fff;
     border: 1px solid #ddd;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-}
-
-.with-submenu:hover + .sub-menu{
-    display: block;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .sub-menu a{
     display: block;
-    padding: 50px;
+    padding: 5px 10px;
     color: #333;
     font-size: 12px;
-    text-decoration-line: none;
+    text-decoration: none;
+}
+
+nav a.with-submenu:hover + .sub-menu{
+    display: block;
 }
 
 .sub-menu a:hover{
-    background-color: #f2f2f2;
+    background-color: #aaa9a9;
 }
 
 .app-download-button{
     background-color: #daad95;
-    padding: 8px 12px;
+    padding: 8px 16px;
+    border: none;
     cursor: pointer;
     position: absolute;
-    top: 50%;
-    right: -60px;
-    transform: translateY(-50%);
+    border-radius: 5px;
 }
 
 .app-download-button a{
     color: #ff7e36;
     font-size: 16px;
     text-decoration: none;
+}
+
+.app-download-button a:hover{
+    background-color: #e28655;
 }
 
 .location{
